# ditoo-usb-adapter

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  FreeRTOS_Kernel_import.cmake  btstack_import.cmake  lwip_import.cmake  mpack.cmake
.zed/: settings.json  tasks.json
cmake/: lwip_import.cmake
configs/FreeRTOS-Kernel/: FreeRTOSConfig.h
configs/btstack/: btstack_config.h
src/: main.c
src/bt-client/: CMakeLists.txt  bt.c
src/bt-client/include/: bt.h
src/bt-ditoo-stack/: CMakeLists.txt  bt.c
src/commands/: CMakeLists.txt  cmd.h
src/usb-dev/: CMakeLists.txt  dev.c  usb_descriptors.c
src/usb-dev/include/: dev.h  tusb_config.h  usb_descriptors.h
